[package]
name = "orvyn"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
containerd-client = { path = "vendor/containerd-client/crates/client" }
prost-types = "0.14.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
